@@ -287,7 +287,7 @@ inclusions, IPython will stop if it reaches 15 recursive inclusions.
 Specify the string used for input prompts. Note that if you are using
 numbered prompts, the number is represented with a '\\#' in the
 string. Don't forget to quote strings with spaces embedded in
-them. Default: 'In [\\#]:'.
+them. Default: 'In [\\#]: '.
 .br
 .sp 1
 Most bash-like escapes can be used to customize IPython's prompts, as well as
@@ -299,7 +299,7 @@ manual.
 Similar to the previous option, but used for the continuation prompts. The
 special sequence '\\D' is similar to '\\#', but with all digits replaced dots
 (so you can have your continuation prompt aligned with your input
-prompt). Default: '   .\\D.:' (note three spaces at the start for alignment
+prompt). Default: '   .\\D.: ' (note three spaces at the start for alignment
 with 'In [\\#]').
 .TP
 .B \-prompt_out|po <string>
